# fallow

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  _typos.toml  action.yml  coverage.json  schema.json
.claude/rules/: cli-crate.md  code-quality.md  core-crate.md  detection.md  plugins.md
.github/: dependabot.yml  zizmor.yml
.github/workflows/: allocs.yml  bench-real-world.yml  bench.yml  ci.yml  conformance.yml  coverage.yml  cross-arch.yml  ecosystem-full.yml  ecosystem.yml  release.yml  scorecard.yml  test-action.yml
action/jq/: review-body.jq  summary-check.jq  summary-combined.jq  summary-health.jq
action/scripts/: analyze.sh
assets/: demo.tape
benchmarks/: bench-dupes.mjs  bench.mjs  download-fixtures.mjs  package-lock.json  package.json
ci/: gitlab-ci.yml
crates/config/: Cargo.toml
crates/config/src/: config.rs  external_plugin.rs  framework.rs  workspace.rs
crates/config/src/config/: boundaries.rs  duplicates_config.rs  format.rs  health.rs  mod.rs  parsing.rs  resolution.rs  rules.rs
crates/config/src/workspace/: mod.rs  package_json.rs  parsers.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs  params.rs  server.rs
crates/mcp/src/server/: mod.rs
crates/mcp/src/server/tests/: args.rs  e2e.rs  edge_cases.rs  mod.rs  params.rs  run.rs  server_info.rs
crates/mcp/src/tools/: health.rs
docs/: backwards-compatibility.md  output-schema.json  positioning.md
scripts/: generate-readme-screenshot.sh
viz-frontend/: package-lock.json  package.json  tsconfig.json
(+311 files in other folders)
