[package]
name = "fallow-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for fallow dead code analyzer"

[[bin]]
name = "fallow-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2", features = ["transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
